# lab11

./: .gitignore  PROMPT_LOG.md  README.md
task1_2/: .dockerignore  Dockerfile  go.mod  go.sum  main.go  main_test.go
task1_2/docs/: docs.go  swagger.json  swagger.yaml
task2_8/: Cargo.toml  app.py  docker-compose.yml  go.mod  main.go  main_test.go  requirements.txt  test_app.py
task2_8/go/: main.go
task2_8/python/: .dockerignore  Dockerfile
task2_8/rust/: .dockerignore  Cargo.toml  Dockerfile
task2_8/rust/src/: lib.rs  main.rs
task2_8/src/: lib.rs  main.rs
task3_10/: .env.example  Dockerfile  docker-compose.yml  go.mod  main.go  main_test.go
task4_2/: Cargo.toml  Dockerfile
task4_2/src/: main.rs
task5_8/: .dockerignore  Dockerfile  docker-compose.yml  go.mod  main.go  main_test.go
