[package]
name = "rust-web-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust-web-server"
path = "src/main.rs"
test = true

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
